@startuml
' Definizione classi principali

class Prodotto {
  +int idProdotto
  +string nome
  +string marca
  +string descrizione
  +string codiceEAN
  +string fotoURL
}

class Prezzo {
  +int idPrezzo
  +float valore
  +Date dataInserimento
  +Date dataValidita
  +int idProdotto
  +int idPuntoVendita
}

class PuntoVendita {
  +int idPuntoVendita
  +string nome
  +string indirizzo
  +string città
  +string telefono
}

class Utente {
  +int idUtente
  +string nome
  +string email
  +string passwordHash
  +enum ruolo {Visitatore, UtenteRegistrato, PuntoVendita, Azienda, Admin}
}

class Watchlist {
  +int idWatchlist
  +int idUtente
  +int idProdotto
}

class Notifica {
  +int idNotifica
  +int idUtente
  +int idProdotto
  +string tipo
  +string messaggio
  +Date dataInvio
}

' Relazioni
Prodotto "1" -- "0..*" Prezzo
PuntoVendita "1" -- "0..*" Prezzo
Utente "1" -- "0..*" Watchlist
Utente "1" -- "0..*" Notifica
Watchlist "*" -- "1" Prodotto
Notifica "*" -- "1" Prodotto

@enduml
